delete controller and refund logic
